Disable tests for now, fix dependency versions